Conservative maximum heap alignment should take vm_allocation_granularity into account

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 9
    • Affects Version/s: 8u40, 9
    • Component/s: hotspot
    • gc
    • b26
    • windows

        The conservative max heap alignment does not take the alignment requirement imposed by the OS into account when calculating it. This may cause some assertions to fail.

        Note that actually no crash has been observed yet, as other alignment requirements are at this time larger than the maximum value of vm allocation granularity (64k vs. 2M).

              Assignee:
              Thomas Schatzl
              Reporter:
              Thomas Schatzl
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: