8048088: Conservative maximum heap alignment should take vm_allocation_granularity into account

Also consider os::vm_allocation_granularity in the calculation.

Reviewed-by: brutisso